[tool.poetry]
name = "solana-autotrader"
version = "0.1.0"
description = "Bot de trading para Solana"
authors = ["Seu Nome <seu@email.com>"]

[tool.poetry.dependencies]
python = "~3.10"
python-telegram-bot = "^20.3"
pandas = "^2.0.3"
pandas-ta = "^0.3.14b0"
httpx = "^0.24.1"
python-dotenv = "^1.0.0"
solders = "0.19.0"
solana = "0.31.0"
spl-token = "0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
